gcc/testsuite/rust/rustc/ui/extenv/extenv-too-many-args.rs
fn main() { env!("one", "two", "three"); } // { dg-error "" "" { target *-*-* } }

